--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 #cache
-backend/readers/__pycache__
+backend/readers/__pycache__/*
 # electron
 /angular-electron-win32-x64
 Release.key
