--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron --disable-gpu .",
     "build-frontend": "./node_modules/.bin/electron-packager . --overwrite",
     "build-backend-mac": "cd backend && pyinstaller engine.py --distpath pyenginedist --add-data data/*.csv:data",
     "build-backend-windows": "cd backend && pyinstaller engine.py --distpath pyenginedist --add-data data\\*.csv;data"
@@ -20,11 +20,12 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^10.1.5",
+    "electron": "^10.0.0",
     "electron-reload": "^1.5.0",
     "electron-reloader": "^1.1.0"
   },
   "dependencies": {
+    "@electron/remote": "^1.1.0",
     "electron-packager": "^15.2.0",
     "node-fetch": "^2.6.1",
     "python-shell": "^1.0.6"
