--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "electron --disable-gpu .",
     "build-frontend": "./node_modules/.bin/electron-packager . --overwrite",
-    "build-backend-mac": "cd backend && pyinstaller engine.py --distpath pyenginedist --add-data data/*.csv:data",
-    "build-backend-windows": "cd backend && pyinstaller engine.py --distpath pyenginedist --add-data data\\*.csv;data"
+    "build-backend-mac": "cd backend && pyinstaller engine.py --distpath pyenginedist --add-data data/*.csv:data --add-data actions/actions.csv:actions",
+    "build-backend-windows": "cd backend && pyinstaller engine.py --distpath pyenginedist --add-data data\\*.csv;data --add-data actions\\actions.csv;actions"
   },
   "repository": "",
   "keywords": [
